debugged on overlapping css issue, causing Add Expense button not clickable on small screen

--- a/expensetracker/src/MainPage/ExpenseTracker.module.css
+++ b/expensetracker/src/MainPage/ExpenseTracker.module.css
@@ -36,6 +36,7 @@
     /* margin: auto; */
     width: 100%;
     height: auto;
+    margin-bottom: 100px;
   }
   .labelsDiv {
     width: 80vw;
